--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="estilos/estilos.css">
     <title>Cafeteria San Francisco</title>
 
 </head>
@@ -20,49 +25,60 @@
     <!--Inicio del header-->
     <header>
         <!--Menú de navegación-->
-        <div>
-            
-            <nav>
+        <div class="contenedor">
+
+            <nav class="menu">
                 <a href="#" id="btn-acerca-de">Acerca de</a>
                 <a href="#" id="btn-menu">Menú</a>
                 <a href="#" id="btn-galeria">Galería</a>
                 <a class="menu" href="#" id="btn-ubicacion">Ubicación</a>
 
             </nav>
-            <div>
-                <h1>Cafetería <span>San Francisco</span></h1>
+            <div class="texto">
+                <h1 class="nombre">Cafetería <span>San Francisco</span></h1>
                 <h3>Un refugio del tiempo, donde el corazón se abriga entre café y recuerdos</h3>
             </div>
         </div>
     </header><!--Fin del header-->
     <!--Inicio del la sección main-->
-    <section>
+    <section class="main">
         <!--Inicio Acerca de-->
-        <section id="acerca-de">
-            <div>
-                <div>
+        <section class="acerca-de" id="acerca-de">
+            <div class="contenedor">
+                <div class="foto">
                     <img src="img/acerca-de.jpg" alt="Acerca de lobby">
                 </div>
                 <article>
                     <h3>Acerca de</h3>
                     <p>
-                        Fundada en 1964 en el corazón histórico de Quito, nuestra cafetería es mucho más que un lugar donde se sirve café; 
-                        es un rincón donde el tiempo parece detenerse, donde cada taza lleva consigo el susurro de generaciones pasadas. 
-                        Enmarcada por la arquitectura colonial de la capital del Ecuador, esta cafetería nació como un espacio íntimo en medio 
-                        de la agitada vida citadina, y con el pasar de los años, se ha convertido en un refugio emocional para quienes buscan 
-                        algo más que una bebida caliente. Aquí, las paredes no solo sostienen ladrillos: guardan secretos, sonrisas y miradas 
-                        que se cruzaron por primera vez en medio del aroma inconfundible del café recién pasado. Los muebles de madera antigua, 
-                        las lámparas de hierro forjado, y el eco suave de boleros y tangos, recrean un ambiente acogedor donde cada visitante se 
+                        Fundada en 1964 en el corazón histórico de Quito, nuestra cafetería es mucho más que un lugar
+                        donde se sirve café;
+                        es un rincón donde el tiempo parece detenerse, donde cada taza lleva consigo el susurro de
+                        generaciones pasadas.
+                        Enmarcada por la arquitectura colonial de la capital del Ecuador, esta cafetería nació como un
+                        espacio íntimo en medio
+                        de la agitada vida citadina, y con el pasar de los años, se ha convertido en un refugio
+                        emocional para quienes buscan
+                        algo más que una bebida caliente. Aquí, las paredes no solo sostienen ladrillos: guardan
+                        secretos, sonrisas y miradas
+                        que se cruzaron por primera vez en medio del aroma inconfundible del café recién pasado. Los
+                        muebles de madera antigua,
+                        las lámparas de hierro forjado, y el eco suave de boleros y tangos, recrean un ambiente acogedor
+                        donde cada visitante se
                         convierte en parte de una historia viva.
                     </p>
                     <p>
-                        Desde sus inicios, la cafetería ha sido testigo de innumerables encuentros: desde tertulias bohemias de artistas y escritores,
-                        hasta amores que florecieron en mesas junto a la ventana. Con una receta única transmitida de generación en generación, 
-                        el café que servimos es una mezcla artesanal que honra las tradiciones cafeteras del país, 
-                        especialmente de las tierras altas y las zonas cafetaleras más emblemáticas del Ecuador. 
-                        Nuestro compromiso no es solo con el sabor, sino con la experiencia: cada detalle ha sido pensado para invitar al 
-                        visitante a un viaje emocional hacia épocas más simples, más cálidas, más humanas. 
-                        Hoy, seis décadas después de su apertura, seguimos abriendo nuestras puertas con la misma pasión de siempre, 
+                        Desde sus inicios, la cafetería ha sido testigo de innumerables encuentros: desde tertulias
+                        bohemias de artistas y escritores,
+                        hasta amores que florecieron en mesas junto a la ventana. Con una receta única transmitida de
+                        generación en generación,
+                        el café que servimos es una mezcla artesanal que honra las tradiciones cafeteras del país,
+                        especialmente de las tierras altas y las zonas cafetaleras más emblemáticas del Ecuador.
+                        Nuestro compromiso no es solo con el sabor, sino con la experiencia: cada detalle ha sido
+                        pensado para invitar al
+                        visitante a un viaje emocional hacia épocas más simples, más cálidas, más humanas.
+                        Hoy, seis décadas después de su apertura, seguimos abriendo nuestras puertas con la misma pasión
+                        de siempre,
                         convencidos de que el buen café no solo se saborea… se recuerda.
 
                     </p>
@@ -120,15 +136,41 @@
                         <div class="platillo">
                             <p class="nombre">Café con leche evaporada</p>
                             <p class="precio">$2.50</p>
-                            <p class="descripcion">Café con leche evaporada</p> 
+                            <p class="descripcion">Café con leche evaporada</p>
                         </div>
-                    </article>
-
+                    </article><!--Fin de la sección de bebidas-->
                 </div>
             </div>
+        </section><!--Fin de la sección menú-->
+        <!--Inicio de la sección galería-->
+        <section class="galeria" id="galeria">
+            <div class="foto">
+                <img src="img/1.jpg" alt="cafe">
 
-        </section>
+            </div>
+            <div class="foto">
+                <img src="img/2.jpg" alt="cafe">
+            </div>
+            <div class="foto">
+                <img src="img/3.jpg" alt="cafe">
+            </div>
+            <div class="foto">
+                <img src="img/4.jpg" alt="cafe">
+            </div>
+            <div class="foto">
+                <img src="img/5.jpg" alt="cafe">
+            </div>
+            <div class="foto">
+                <img src="img/6.jpg" alt="cafe">
+            </div>
+            <div class="foto">
+                <img src="img/7.jpg" alt="cafe">
+            </div>
+            <div class="foto">
+                <img src="img/8.jpg" alt="cafe">
+            </div>
 
+        </section><!--Fin galeria-->
     </section>
 
 </body>
