aplicando estilo acercade y menu

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h3 class="titulo" id="platillos">Menú</h3>
                 <div class="contenedor-menu2">
                     <article>
-                        <p class="cotegoria">De comer</p>
+                        <p class="categoria">De comer</p>
                         <div class="platillo">
                             <p class="nombre">Arroz camarón</p>
                             <p class="precio">$8.50</p>
