--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <section class="menu">
             <div class="contenedor">
                 <h3 class="titulo" id="platillos">Menú</h3>
+                <!--poner otro div -->
                 <div class="contenedor-menu2">
                     <article>
                         <p class="categoria">De comer</p>
@@ -171,7 +172,38 @@
             </div>
 
         </section><!--Fin galeria-->
-    </section>
+
+        <!--Inicio de ubicación-->
+        <section class="ubicacion" id="ubicacion">
+            <div class="contenedor">
+                <h3 class="titulo">Ubicación</h3>
+                <div class="direccion">
+                    <p class="calle">E5 <br> S48-520</p><br>
+                    <p class="telefono">(+593) 0992628980</p>
+                    <p class="correo">cafeteria@ejemplo.com</p>
+                </div>
+
+                <div class="horarios">
+                    <h4>Horarios</h4>
+                    <p class="entre-semana">Lunes a Viernes <br>7:00-21:00</p>
+                    <p class="fin-semana">Sabados y domingos <br>11:00-23:00</p>
+                </div>
+            </div>
+        </section> <!-- fin ubicacion-->
+        <!--Inicio mapa-->
+        <section class="mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1146.0164068981207!2d-78.49803724041764!3d-0.19354257108565237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d59a6a396e7a79%3A0xb00ae5ab53467167!2sInstituto%20Superior%20Tecnol%C3%B3gico%20Quito%20-%20ITQ!5e1!3m2!1ses!2sec!4v1744424038862!5m2!1ses!2sec" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           
+        </section><!--Fin mapa-->
+    </section><!--Fin de la sección main-->
+    <!--footer  -->
+    <footer>
+        <div class="contenedor">
+            <div class="copyright">
+                <p>	&COPY; Todos los derechos reservados davitorn 2015-2025</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
