aplicando js al proyecto

--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
         </div>
     </footer>
 
+
+
+    <!--Nos enlazamos a javaScript-->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/animacion.js"></script>
+
 </body>
 
 </html>
